[tool.poetry]
name = "quantum-tools"
version = "0.1.0"
description = ""
authors = ["Oskari Kerppo <oskari.kerppo@gmail.com>"]
readme = "README.md"
packages = [{include = "quantum_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pre-commit = "^3.0.4"
pylint = "^2.16.2"
pytest = "^7.2.1"
coverage = "^7.1.0"
commitizen = "^2.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
